@@ -19,6 +19,8 @@ The rules for this file:
  * 2.1.0
 
 Fixes
+  * Added missing exe_err import in hole.py. Fixed a bug in HoleAnalysis where 
+    kwarg was passed instead of object to generate path (Issue #3493, PR #3496)
   * Fixes creation of vmd surfaces in hole2 when using non-contiguous frames
     with start/stop/step (Issue #3476)
   * Allow empty strings to be passed to HydrogenBondAnalysis (Issue #3453).
